welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:36: error: Unmatched closing brace '}' ignored here
}
^